@@ -1,3 +1,7 @@
+Fri, Dec 18, 2008
+---------------------------------------------------------------------
+- Replaced stub text fields with autocomplete in [Leads/New].
+
 Thu, Dec 18, 2008
 ---------------------------------------------------------------------
 - Implemented ratings JavaScript library to show star ratings.
